assets/css/users/master.css
@import '../global.css';
@import 'keyframes.css';

/* Navbar */

#navbar {
	background-color: var(--soft-gray);
	height: 100px;
	display: flex;
	align-items: center;
}

#navbar .content {
	display: flex;
	align-items: center;
	justify-content: space-between;
}

#navbar .left-nav {
	display: flex;
	align-items: center;
	gap: 2rem;
}

#navbar .menu {
	gap: 1rem;
}

#navbar .menu li a {
	font-weight: 500;
	color: var(--grey);
}

#navbar .menu li a:hover {
	color: var(--black);
}

#navbar .register-login {
	gap: 1rem;
	display: flex;
	align-items: center;
}

#navbar .register-login li:nth-child(1) a {
	color: var(--bright-red);
	font-weight: 500;
	text-transform: capitalize;
}

#show-cart {
	font-size: 1.2rem;
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 0.8rem;
	position: fixed;
	right: 2rem;
	bottom: 2rem;
	background-color: var(--light-teal);
	border-radius: 50%;
	color: var(--white);
}

#show-cart span {
	position: absolute;
	top: -0.5rem;
	left: -0.3rem;
	color: var(--white);
	background-color: var(--teal);
	font-size: 0.7rem;
	border-radius: 50%;
	padding: 0.2rem 0.5rem;
}

#show-cart:hover {
	transform: scale(1.1);
}

#your-orders {
	font-weight: 500;
	text-transform: capitalize;
	color: var(--dark-teal);
}

#your-orders:hover {
	font-weight: 600;
}

/* Main Banner */

#main-banner {
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
}

#main-banner .content {
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 15rem 0;
	flex-direction: column;
	gap: 3rem;
}

#main-banner .banner-header {
	text-align: center;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	gap: 0.5rem;
}

#main-banner .banner-header h1 {
	font-size: 2.5rem;
	font-weight: 600;
	text-transform: capitalize;
	color: var(--grey);
}

#main-banner .banner-header p {
	font-size: 1rem;
	font-weight: 500;
	color: var(--black);
	text-transform: lowercase;
}

#main-banner form {
	position: relative;
	display: flex;
	align-items: center;
	gap: 0.5rem;
}

#main-banner form input {
	background-color: var(--soft-gray);
	padding: 0.7rem 0.7rem 0.7rem 3rem;
	font-size: 1rem;
}
#main-banner form i.fa-solid {
	position: absolute;
	color: var(--bright-red);
	left: 0.7rem;
	font-size: 1.1rem;
}

/* Categories Bar */

#categories-bar {
	margin: 3rem 0;
}

#categories-bar .categories {
	align-items: center;
	justify-content: space-between;
	gap: 1rem;
}

#categories-bar .categories .category-button {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 0.5rem;
}

#categories-bar .categories .category-button img {
	height: 80px;
	width: 80px;
	object-fit: cover;
	border-radius: 50%;
	filter: drop-shadow(1px 1px 15px #2225);
	transition: all 0.2s ease-in-out;
}

#categories-bar .categories .category-button.active img {
	padding: 0.1rem;
	border: 3px solid var(--teal);
}

#categories-bar .categories .category-button:hover img {
	transform: scale(1.1);
}

#categories-bar .categories .category-button span {
	font-weight: 600;
	text-transform: capitalize;
	color: var(--dark-teal);
	font-size: 1rem;
}

/* Dish List */

#dish-list .content {
	display: grid;
	grid-template-columns: repeat(4, 24%);
	column-gap: 1.33%;
	row-gap: 2%;
}

.dish-card {
	display: flex;
	flex-direction: column;
	overflow: hidden;
	border-radius: 0.3rem;
	box-shadow: var(--light-shadow);
}

.dish-card .img {
	width: 100%;
	height: 250px;
}

.dish-card img {
	width: 100%;
	height: 100%;
	object-fit: cover;
}

.dish-card .info {
	padding: 1.5rem 1rem;
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 0.5rem;
}

.dish-card .name {
	font-family: var(--font-marcellus);
	text-align: center;
	color: var(--dark-teal);
	font-weight: 500;
	text-transform: capitalize;
}

.dish-card .price {
	position: relative;
	font-weight: 500;
}

.dish-card .price::after,
.dish-card .price::before {
	content: '';
	height: 1px;
	width: 50px;
	position: absolute;
	background-color: var(--dark-teal);
	transform: translate(-50%, -50%);
}

.dish-card .price::after {
	left: -2rem;
	top: 0.5rem;
}

.dish-card .price::before {
	right: -5rem;
	top: 0.5rem;
}

.dish-card .description {
	color: var(--gray);
	font-size: 0.9rem;
	opacity: 0.7;
	font-weight: 300;
}

/* Footer */

#footer {
	background-color: var(--soft-gray);
	padding: 3rem 0;
	margin-top: 3rem;
}

#footer .content {
	display: grid;
	grid-template-columns: repeat(3, 32%);
	column-gap: 2%;
	border-bottom: 1px solid #3332;
	padding-bottom: 2rem;
	margin-bottom: 2rem;
}

#footer .col {
	display: flex;
	flex-direction: column;
	gap: 1rem;
}

#footer .col h4 {
	font-size: 1.1rem;
	color: var(--black);
	font-weight: 600;
}

#footer .col ul {
	flex-direction: column;
	gap: 0.5rem;
}

#footer .col ul a {
	color: var(--grey);
	font-weight: 400;
}

#footer .col ul a:hover {
	color: var(--black);
}

#footer .col:nth-child(3) ul {
	flex-direction: row;
	gap: 1rem;
}

#footer .col:nth-child(3) ul a i {
	color: var(--burnt-orange);
	transition: all 0.1s ease-in-out;
}

#footer .col:nth-child(3) ul a:hover i {
	color: var(--bright-red);
	transform: scale(1.1);
}

#footer .bottom {
	display: flex;
	justify-content: space-between;
	align-items: center;
	font-size: 0.9rem;
}

#footer .bottom p span {
	font-weight: 500;
}

#footer .bottom ul {
	gap: 1rem;
}

#footer .bottom ul a {
	font-weight: 500;
	text-transform: capitalize;
	color: var(--bright-red);
}

/* Cart */

#cart-container {
	position: fixed;
	top: 0;
	right: 0;
	background-color: var(--soft-gray);
	z-index: 999;
	height: 100vh;
	width: 100%;
	display: none;
}

#cart-container.show {
	display: block;
}

#cart-container.hide {
	display: none;
}

#cart {
	position: absolute;
	top: 0;
	right: -100%;
	height: 100%;
	background-color: var(--white);
	border-top-left-radius: 115%;
	border-bottom-left-radius: 115%;
	padding: 2rem 2rem 2rem 10rem;
	display: flex;
	flex-direction: column;
	gap: 1rem;
}

#cart.show {
	animation: SlideLeftCart 0.5s linear 0s 1 normal forwards;
}

#cart.hide {
	animation: SlideRightCart 0.5s linear 0s 1 normal forwards;
}

#cart .cart-header {
	display: flex;
	justify-content: center;
	align-items: center;
	position: relative;
}

#cart .cart-header button {
	position: absolute;
	left: 0;
	color: var(--bright-red);
	font-size: 1.2rem;
}

#cart .cart-header button:hover {
	transform: scale(1.1);
}

#cart .cart-header h5 {
	font-size: 1rem;
	text-transform: capitalize;
	font-weight: 500;
}

#cart .items-list {
	display: flex;
	flex-direction: column;
	gap: 1rem;
	height: calc(100vh - 4rem);
	max-height: 100vh;
	overflow-y: scroll;
	padding: 0.5rem;
}

#cart .total {
	display: flex;
	justify-content: space-between;
	align-items: center;
	min-width: 250px;
}

#cart .total p:nth-child(1) {
	font-weight: 500;
	color: var(--dark-teal);
	text-transform: uppercase;
	font-size: 0.9rem;
}

#cart .total p:nth-child(2) {
	font-weight: bold;
	color: var(--teal);
}

.cart-item {
	display: flex;
	gap: 1rem;
	align-items: center;
	box-shadow: var(--light-shadow);
	border-radius: 0.3rem;
	padding: 0.3rem;
	position: relative;
}

.cart-item img {
	height: 60px;
	width: 60px;
	object-fit: cover;
	border-radius: 0.3rem;
}

.cart-item .item-info {
	display: flex;
	align-items: flex-end;
	gap: 0.5rem;
}

.cart-item .item-info .info {
	display: flex;
	flex-direction: column;
	gap: 1rem;
}

.cart-item .item-info .info .name {
	font-weight: 500;
	font-family: var(--font-marcellus);
	text-transform: capitalize;
	color: var(--dark-teal);
	overflow: hidden;
	text-overflow: ellipsis;
	text-wrap: nowrap;
	max-width: 100px;
}

.cart-item .item-info .price {
	font-size: 0.9rem;
	font-weight: 300;
	color: var(--black);
}

.cart-item .item-info .info .quantity {
	display: flex;
	align-items: center;
	gap: 0.5rem;
}

.cart-item .item-info .info .quantity button {
	color: var(--burnt-orange);
	font-size: 0.9rem;
	background-color: var(--soft-gray);
	padding: 0.3rem;
}

.cart-item .item-info .info .quantity button i {
	pointer-events: none;
}

.cart-item .item-info .info .quantity span {
	font-weight: 300;
	color: #2229;
	font-size: 0.9rem;
}

.cart-item .remove-item {
	position: absolute;
	right: 0.5rem;
	top: 0.5rem;
	font-size: 0.9rem;
}

.cart-item .remove-item i {
	pointer-events: none;
}

.cart-item .remove-item:hover {
	color: var(--bright-red);
	transform: scale(1.1);
}

